user info show name

--- a/app/views/user/_left_nav.html.erb
+++ b/app/views/user/_left_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="thumbnail">
   <%= image_tag current_user.show_image , class: "img-rounded" %>
   <div class="caption">
-    <h4><%= current_user.nickname %></h4>
+    <h4><%= current_user.show_name %></h4>
     <p><span class="empirical" >经验值</span>&nbsp;&nbsp;&nbsp;<span>学习时长</span></p>
     <p><span class="empirical value">1234</span>&nbsp;&nbsp;<span class="value">1小时50分钟</span></p>
     <hr class="divesi">
