--- a/app/views/training_platform/task_categories/_edit_form.html.erb
+++ b/app/views/training_platform/task_categories/_edit_form.html.erb
@@ -1,6 +1,6 @@
 <div  class="my-nav1">
   <!-- Nav tabs -->
-  <%= render "tags" %>
+  <%= render "training_platform/share/tags" %>
 
   <div class="tab-content main">
     <div class="panel panel-default">
