--- a/app/views/training_platform/task_categories/_form.html.erb
+++ b/app/views/training_platform/task_categories/_form.html.erb
@@ -51,10 +51,10 @@
         <%= f.input :is_public, collection: Project::IsPublic.invert, as: :radio_buttons, wrapper: "horizontal_radio_and_checkboxes210", item_wrapper_class: "radio-inline" %>
         <div class="row tp_m">
           <div class="col-sm-6">
-            <%= f.button :submit, "变更", class: "btn btn-sm btn-info-tp" %>
+            <%= f.button :submit, "变更", class: "btn btn-defaut btn-info-tp" %>
           </div>
           <div class="col-sm-6">
-            <button type="button" class="btn btn-sm btn-danger-tp" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-defaut btn-danger-tp" data-dismiss="modal">取消</button>
           </div>
         </div>
     <% end %>
