--- a/app/views/training_platform/share/_comment.html.erb
+++ b/app/views/training_platform/share/_comment.html.erb
@@ -19,22 +19,23 @@
 					<div id="commentList" class="profile-feed">
 						<% commentable.root_comments.each do |comment| %>
 						<div class="profile-activity clearfix">
-							<div>
-								<%= image_tag(comment.try(:user).try(:show_image) , class: "pull-left") %>
-								<a class="user" href="#"> <%= comment.try(:user).try(:show_name) %> </a>
-								<%= comment.body %>
-								<!-- 附件链接 -->
-								<!-- <a href="#">Take a look</a> -->
-
-								<div class="time">
-									<i class="icon-time bigger-110"></i>
-									<%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S")%>
+							<div class="row">
+								<div class="col-sm-1">
+									<%= image_tag(comment.try(:user).try(:show_image) , class: "pull-left") %>
+								</div>
+								<div class="col-sm-11">
+									<a class="user" href="#"><%= comment.try(:user).try(:show_name) %> </a>
+									<%= comment.body %>
+									<div class="time">
+										<i class="icon-time bigger-110"></i>
+										<%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S")%>
+									</div>
 								</div>
 							</div>
-							<%=link_to training_platform_comment_path(comment), method: :delete, class:"red", remote: true, format: :js do %>
-							<div class="tools action-buttons">
-								<i class="icon-remove bigger-125"></i>
-							</div>
+							<%=link_to training_platform_comment_path(comment), method: :delete, class:"red", remote: true, format: :js, data: {confirm: "确定删除当前评论？"} do %>
+								<div class="tools action-buttons">
+									<i class="icon-remove bigger-125"></i>
+								</div>
 							<% end %>
 						</div>
 						<% end %>
