--- a/app/views/layouts/applies.html.erb
+++ b/app/views/layouts/applies.html.erb
@@ -3,8 +3,8 @@
 <head>
 	<title><%= title %></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
-	<%= stylesheet_link_tag    'training_platform', media: 'all', 'data-turbolinks-track' => true %>
-	<%= javascript_include_tag 'training_platform', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag    'wechat', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'wechat', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 </head>
 
