--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -1,13 +1,10 @@
-<h1>微信报名</h1>
-<div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Dropdown
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
+<div class="wrap">
+	<div class="row">
+		<div class="col-xs-12">
+			<%=image_tag"apply2.png",width:"80%"%>
+		</div>
+		<div class="col-xs-12">
+			<%=image_tag"apply1.png",width:"80%"%>
+		</div>
+	</div>
 </div>
