--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -1,5 +1,6 @@
 .wechat__applies__new{
-	h1{
-		color: red;
-	}
+  .wrap{
+  	background-image:image-url("apply-bg1.png") no-repeat;
+  	background-size:100%;
+  }
 }
