--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -1,10 +1,5 @@
 <div class="wrap">
 	<div class="row">
-		<div class="col-xs-12">
-			<%=image_tag"apply2.png",width:"80%"%>
-		</div>
-		<div class="col-xs-12">
-			<%=image_tag"apply1.png",width:"80%"%>
-		</div>
+		<span><a href="#">历史报名情况</a></span>
 	</div>
 </div>
