--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -1,6 +1,43 @@
+html, body{
+	height: 100%;
+}
 .wechat__applies__new{
   .wrap{
-  	background-image:image-url("apply-bg1.png") no-repeat;
-  	background-size:100%;
+		height: 100%;
+		.my-btn{
+			color: #9B2D00;
+			background-color: #FFF47E;
+			margin:10px 0;
+			padding: 6px 40px 6px 30px;
+			border-color: #FFF47E;
+			border-radius: 20px;
+			font-size: 20px;
+			box-shadow: 2px 2px  #E6BC40;
+			position: relative;
+		}
+		.my-icon{
+			position: absolute;
+			bottom: 7px;
+			right: 20px;
+
+		}
+		ul{
+			padding-left: 0;
+		}
+		ul li{
+			list-style: none; 
+		}
+		li a:hover{
+			color: #fff;
+			text-decoration: underline;
+		}
+		a{
+			color: #fff;
+			text-decoration: underline;
+		}
+		.content{
+			position: absolute;
+			bottom: 10px;
+		}
   }
 }
