--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -4,6 +4,7 @@ html, body{
 .wechat__applies__new{
   .wrap{
 		height: 100%;
+		padding: 0 15px;
 		.my-btn{
 			color: #9B2D00;
 			background-color: #FFF47E;
