--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -1,7 +1,7 @@
 html, body{
 	height: 100%;
 }
-.wechat__applies__new{
+.wechat__applies__home{
   .wrap{
 		height: 100%;
 		padding: 0 15px;
@@ -42,3 +42,9 @@ html, body{
 		}
   }
 }
+.wechat__applies__index{
+	.container{
+		padding-top: 200px;
+	}
+}
+
