--- a/app/views/wechat/applies/home.html.erb
+++ b/app/views/wechat/applies/home.html.erb
@@ -6,8 +6,7 @@
 			 		<%=image_tag"apply_icon.png",width:"10px%"%>
 			 </div>	
 			</botton>
-			
-			<ul>
+			<ul class="my_ul">
 				<li>
 					<a href="#">历史报名情况</a>
 				</li>
