--- a/app/views/wechat/applies/home.html.erb
+++ b/app/views/wechat/applies/home.html.erb
@@ -1,15 +1,16 @@
 <div class="wrap">
 	<div class="row">
 		<div class="col-xs-12 text-center content">
-			<botton class="btn btn-default my-btn">我要报名
-				 <div class="my-icon">
-			 		<%=image_tag"apply_icon.png",width:"10px%"%>
-			 </div>	
-			</botton>
+			<%= link_to new_wechat_apply_path do %>
+				<botton class="btn btn-default my-btn">
+					我要报名
+					<div class="my-icon">
+						<%=image_tag"apply_icon.png",width:"10px%"%>
+					</div>	
+				</botton>
+			<% end %>
 			<ul class="my_ul">
-				<li>
-					<a href="#">历史报名情况</a>
-				</li>
+				<li><%= link_to("历史报名情况", wechat_applies_path ) %></li>
 			</ul>	
 		</div>	
 	</div>
