--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -1,28 +1,26 @@
-<div class="container">
-	<div class="main row">
-		<h3 class="my-title text-center">您的历史报名纪录</h3>
-		<% 6.times do %>
-			<div class="frame">
-				<div class="row text-center">
-					<div class="col-xs-4 no-padding">
-						<span>01. ios开发</span>
-					</div>
-					<div class="col-xs-4 no-padding">
-						<span>2015-04-03</span>
-					</div>
-					<div class="col-xs-4 no-padding">
-						<button class="btn btn-default cancel-btn">取消报名</button>
-					</div>
+<div class="main">
+	<h3 class="my-title text-center">您的历史报名纪录</h3>
+	<% 6.times do %>
+		<div class="frame">
+			<div class="row text-center">
+				<div class="col-xs-4 no-padding">
+					<span>01. ios开发</span>
+				</div>
+				<div class="col-xs-4 no-padding">
+					<span>2015-04-03</span>
+				</div>
+				<div class="col-xs-4 no-padding">
+					<button class="btn btn-default cancel-btn">取消报名</button>
 				</div>
 			</div>
-		<% end %>
-		<ul class="my_ul text-center">
-			<li>
-				<a href="#">返回上一页</a>
-			</li>
-		</ul>
-	</div>	
-</div>
+		</div>
+	<% end %>
+	<ul class="my_ul text-center">
+		<li>
+			<a href="#">返回上一页</a>
+		</li>
+	</ul>
+</div>	
 
 <script>
 	$(function(){
