code applis#new

--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -87,4 +87,16 @@ html, body{
 		}
 	}
 }
-
+.wechat__applies__new{
+	.row{
+		padding:150px 20px 20px 20px;
+		
+	}
+	.frame{
+		margin:5px 0;
+		font-size: 16px;
+		background-color: #fff;
+		padding: 5px 15px;
+		border: 2px #FFEE00 solid;
+	}
+}
