optimize style of applies.scss

--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -9,7 +9,7 @@
 	.no-margin{
 		margin: 0;
 	}
-	.my_ul{
+	.my-ul{
 		padding-left: 0;		
 		list-style: none;	
 		ul li{
@@ -22,6 +22,16 @@
 		a{
 			color: #fff;
 			text-decoration: underline;
+		}
+	}
+	.frame{
+		margin: 5px 0;
+		font-size: 16px;
+		background-color: #fff;
+		padding: 5px 15px;
+		border: 2px #FFEE00 solid;
+		.cancel-btn{
+			padding: 2px 12px;
 		}
 	}
 	/**wechat/applies/new**/
@@ -60,64 +70,31 @@
 		height: 73%;
 		padding: 0 20px;
 		overflow: auto;
-		.frame{
-			margin:10px 0;
-			font-size: 16px;
-			background-color: #fff;
-			padding: 5px 15px;
-			border: 2px #FFEE00 solid;
-			.cancel-btn{
-				padding: 2px 12px;
-			}
-		}
 		.my-title{
 			color:#fff;
 			padding-bottom:10px; 
 		}
 	}
-}
-.wechat__applies__new{
+	/**wecaht/applies/new**/
 	.my-main{
 		position:fixed;
 		bottom:20px;
 		.my-row{
 			padding: 20px;
-				h3{
-					margin-top: 20px;
-					margin-bottom: 20px;
-				}
-				.my-p{
-					color:#fff;
-					margin-bottom: 30px;
-					font-size: 16px;
-				}
-			.frame{
-				margin:5px 0;
+			h3{
+				margin-top: 20px;
+				margin-bottom: 20px;
+			}
+			.my-p{
+				color:#fff;
+				margin-bottom: 30px;
 				font-size: 16px;
-				background-color: #fff;
-				padding: 5px 15px;
-				border: 2px #FFEE00 solid;
 			}
 			.my-lg{
 				padding:6px 0;
 				border-radius: 0;
 				background-color: #E5BF13;
 				border:1px solid #DBA40A;
-			}
-		}
-		.my-ul{
-			padding-left: 0;
-			margin:0 0 10px;			
-			li{
-				list-style: none; 
-			}
-			li a:hover{
-				color: #fff;
-				text-decoration: underline;
-			}
-			a{
-				color: #fff;
-				text-decoration: underline;
 			}
 		}
 	}
