--- a/app/views/wechat/applies/home.html.erb
+++ b/app/views/wechat/applies/home.html.erb
@@ -9,7 +9,7 @@
 					</div>	
 				</botton>
 			<% end %>
-			<ul class="my_ul">
+			<ul class="my-ul">
 				<li><%= link_to("历史报名情况", wechat_applies_path ) %></li>
 			</ul>	
 		</div>	
