--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -19,7 +19,9 @@
 	<% else %>
 		<h4 class="text-center text-info">没有报名记录，赶快去报名吧！</h3>
 	<% end %>
-	<%= render partial: 'back' %>
+	<ul class="my-ul text-center">
+		<li><a href="#">返回上一页</a></li>
+	</ul>
 </div>	
 
 <script>
