--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -1,18 +1,39 @@
-<%#= simple_form_for :student, url: wechat_applies_path, method: :post do |f| %>
-  <%#= f.input :phone, label: 'Your username please', error: 'Username is mandatory, please specify one' %>
-  <%#= f.input :qq, hint: 'No special characters.' %>
-  <%#= f.input :email, placeholder: 'user@domain.com' %>
-  <%#= f.button :submit %>
-<%# end %>
-<div class="container my-main">
+	<%#= simple_form_for :student, url: wechat_applies_path, method: :post do |f| %>
+	<%#= f.input :phone, label: 'Your username please', error: 'Username is mandatory, please specify one' %>
+	<%#= f.input :qq, hint: 'No special characters.' %>
+	<%#= f.input :email, placeholder: 'user@domain.com' %>
+	<%#= f.button :submit %>
+	<%# end %>
+
+	<!-- how know us -->
+	<div class="container my-main" style="display:none">
 	<div class="row my-row text-center">
 		<p class="text-center my-p">您好，欢迎参加全栈工程师的培训<br>为了让你能更好的参加培训<br>请认真填写一下信息</p>
-		<h3 class="text-center">您是如何知道我们的 ？</h3>
-		<div class="col-xs-12 frame">老师推荐</div>
-		<div class="col-xs-12 frame">校园宣讲</div>
-		<div class="col-xs-12 frame">朋友介绍</div>
-		<div class="col-xs-12 frame">邦彦网站</div>
-		<div class="col-xs-12 frame">其他</div>
+		<div>
+			<h3 class="text-center">您是如何知道我们的 ？</h3>
+			<div class="col-xs-12 frame">老师推荐</div>
+			<div class="col-xs-12 frame">校园宣讲</div>
+			<div class="col-xs-12 frame">朋友介绍</div>
+			<div class="col-xs-12 frame">邦彦网站</div>
+			<div class="col-xs-12 frame">其他</div>
+			<button type="button" class="btn btn-lg btn-block my-lg">下一步</button>
+		</div>	
+	</div>
+	<ul class="my-ul text-center">
+		<li>
+			<a href="#">返回上一页</a>
+		</li>
+	</ul>
+	</div>
+
+	<!-- select course -->
+	<div class="container my-main" style="display:none">
+	<div class="row my-row text-center">
+		<p class="text-center my-p">您好，欢迎参加全栈工程师的培训<br>为了让你能更好的参加培训<br>请认真填写一下信息</p>
+		<h3>请选择一门意向课程</h3>
+		<div class="col-xs-12 frame">ios开发</div>
+		<div class="col-xs-12 frame">安卓开发</div>
+		<div class="col-xs-12 frame">WEB全栈</div>	
 		<button type="button" class="btn btn-lg btn-block my-lg">下一步</button>
 	</div>
 	<ul class="my-ul text-center">
@@ -20,9 +41,99 @@
 			<a href="#">返回上一页</a>
 		</li>
 	</ul>
-</div>
-<script>
+	</div>
+	<!-- apply online -->
+
+	<div class="container my-main">
+	<div class="row my-row text-center">
+		<h3>在线报名</h3>
+		<div class="col-xs-8">
+			<form class="form-inline">
+				<div class="form-group">
+				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="姓名＊">
+				</div>
+			</form>
+		</div>
+		<div class="col-xs-4">
+			<div class="checkbox">性别＊男／女
+			  </div>
+		</div>
+		<div class="col-xs-12">
+			<form class="form-inline">
+				<div class="form-group">
+				  <input type="number" class="form-control" id="exampleInputPassword3" placeholder="手机＊">
+				</div>
+			</form>
+		</div>
+		<div class="col-xs-12">
+			<form class="form-inline">
+				<div class="form-group">
+				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="QQ邮箱＊">
+				</div>
+			</form>
+		</div>
+		<div class="col-xs-12">
+			<form class="form-inline">
+				<div class="form-group">
+				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="地址＊">
+				</div>
+			</form>
+		</div>
+		<div class="col-xs-6">
+			<div class="dropdown">
+			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+			    在校学生
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			    <li><a href="#">Action</a></li>
+			  </ul>
+			</div>
+		</div>
+		<div class="col-xs-6">
+			<div class="dropdown">
+			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+			    研究生
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			    <li><a href="#">Action</a></li>
+			  </ul>
+			</div>
+		</div>
+		<div class="col-xs-12">
+			<form class="form-inline">
+				<div class="form-group">
+				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="最高院校">
+				</div>
+			</form>
+		</div>
+	</div>
+	<ul class="my-ul text-center">
+		<li>
+			<a href="#">返回上一页</a>
+		</li>
+	</ul>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!-- js -->
+	<script>
 	$(function(){
 		$.backstretch("<%= image_url "apply_bg2.png"%>");
 	});
-</script>
+	</script>
+	<script type="javascript">
+	$	
+	</script>
