--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -50,7 +50,7 @@
 		<div class="col-xs-8">
 			<form class="form-inline">
 				<div class="form-group">
-				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="姓名＊">
+				  <input type="name" class="form-control frame" id="exampleInputPassword3" placeholder="姓名＊">
 				</div>
 			</form>
 		</div>
@@ -61,21 +61,21 @@
 		<div class="col-xs-12">
 			<form class="form-inline">
 				<div class="form-group">
-				  <input type="number" class="form-control" id="exampleInputPassword3" placeholder="手机＊">
+				  <input type="number" class="form-control frame" id="exampleInputPassword3" placeholder="手机＊">
 				</div>
 			</form>
 		</div>
 		<div class="col-xs-12">
 			<form class="form-inline">
 				<div class="form-group">
-				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="QQ邮箱＊">
+				  <input type="name" class="form-control frame" id="exampleInputPassword3" placeholder="QQ邮箱＊">
 				</div>
 			</form>
 		</div>
 		<div class="col-xs-12">
 			<form class="form-inline">
 				<div class="form-group">
-				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="地址＊">
+				  <input type="name" class="form-control frame" id="exampleInputPassword3" placeholder="地址＊">
 				</div>
 			</form>
 		</div>
@@ -104,7 +104,7 @@
 		<div class="col-xs-12">
 			<form class="form-inline">
 				<div class="form-group">
-				  <input type="name" class="form-control" id="exampleInputPassword3" placeholder="最高院校">
+				  <input type="name" class="form-control frame" id="exampleInputPassword3" placeholder="最高院校">
 				</div>
 			</form>
 		</div>
