--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -20,7 +20,7 @@
 		<h4 class="text-center text-info">没有报名记录，赶快去报名吧！</h3>
 	<% end %>
 	<ul class="my-ul text-center">
-		<li><a href="#">返回上一页</a></li>
+		<li><a href="#" onclick="javascript:history.back(-1);">返回上一页</a></li>
 	</ul>
 </div>	
 
