--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -97,7 +97,7 @@
 				background-color: #E5BF13;
 				border:1px solid #DBA40A;
 			}
-			.select-way{
+			.selected{
 				background: image_url("apply_select.png") no-repeat;
 				background-size: 32px 32px;
 				background-position: 95% 20%;
