--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -35,6 +35,10 @@
 			padding: 2px 12px;
 		}
 	}
+	img{
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
 	/**wechat/applies/home**/
 	.wrap{
 		height: 100%;
@@ -62,14 +66,11 @@
 			left: 0;
 		}
 	}
-	/**wechat/applies**/
+	/**wechat/applies/index**/
 	.main{
-		position:absolute;
-		bottom:0;
-		left: 0;
 		width: 100%;
 		height: 73%;
-		padding: 0 20px;
+		padding: 20px;
 		overflow: auto;
 		.my-title{
 			color:#fff;
@@ -78,8 +79,6 @@
 	}
 	/**wecaht/applies/new**/
 	.my-main{
-		position:fixed;
-		bottom:20px;
 		.my-row{
 			padding: 20px;
 			h3{
@@ -88,7 +87,7 @@
 			}
 			.my-p{
 				color:#fff;
-				margin-bottom: 30px;
+				margin-bottom: 20px;
 				font-size: 16px;
 			}
 			.my-lg{
