--- a/app/views/wechat/applies/new.html.erb
+++ b/app/views/wechat/applies/new.html.erb
@@ -4,7 +4,7 @@
   <%#= f.input :email, placeholder: 'user@domain.com' %>
   <%#= f.button :submit %>
 <%# end %>
-<div class="container my-main"  id="my_way">
+<div class="container my-main"  id="my_way" style="display:none">
 	<div class="row my-row text-center">
 		<div class="text-center">
 			<%=image_tag"apply2.png",width:"90%"%>
@@ -58,8 +58,8 @@
 		<li><a href="javascript: void(0);" id="back-way">返回上一页</a></li>
 	</ul>
 </div>
-
-<div class="container my-main" id="my-info" style="display:none">
+<!-- personal information -->
+<div class="container my-main" id="my_info">
 	<div class="row my-row text-center">
 		<div class="text-center">
 			<%=image_tag"apply2.png",width:"90%"%>
@@ -79,7 +79,7 @@
 		<div class="col-xs-12">
 			<form class="form-inline">
 				<div class="form-group">
-					<input type="number" class="form-control frame" id="exampleInputPassword3" placeholder="手机＊">
+					<input type="name" class="form-control frame" id="exampleInputPassword3" placeholder="手机＊">
 				</div>
 			</form>
 		</div>
@@ -99,7 +99,7 @@
 		</div>
 		<div class="col-xs-6">
 			<div class="dropdown">
-				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+				<button class="col-xs-12 btn btn-default dropdown-toggle my-frame" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 					在校学生
 					<span class="caret"></span>
 				</button>
@@ -110,7 +110,7 @@
 		</div>
 		<div class="col-xs-6">
 			<div class="dropdown">
-				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+				<button class="col-xs-12 btn btn-default dropdown-toggle my-frame" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 					研究生
 					<span class="caret"></span>
 				</button>
@@ -134,25 +134,28 @@
 
 <!-- js -->
 <script type="text/javascript">
+	// background
 	$(function(){
 		$.backstretch("<%= image_url "apply_info3.png"%>");
-
-		$(".new1").click(function(){
-			$("#my_course").show();
-			$("#my_way").hide( );
-		});
-		$(".new2").click(function(){
-			$("#my_info").show();
-			$("#my_course").hide();
-		})
-		$("#back-way").click(function(){
-			$("#my_course").hide();
-			$("#my_way").show();
-		});
-		$("#back-course").click(function(){
-			$("#my_info").hide();
-			$("#my_course").show();
-		})
-	})	
+	});
+	// new.html
+	// $(function(){
+	// 	$(".new1").click(function(){
+	// 		$("#my_course").show();
+	// 		$("#my_way").hide( );
+	// 	});
+	// 	$(".new2").click(function(){
+	// 		$("#my_info").show();
+	// 		$("#my_course").hide();
+	// 	});
+	// 	$("#back-way").click(function(){
+	// 		$("#my_course").hide();
+	// 		$("#my_way").show();
+	// 	});
+	// 	$("#back-course").click(function(){
+	// 		$("#my_info").hide();
+	// 		$("#my_course").show();
+	// 	})
+	// })	
 </script>
 
